Ajout de la touche ajout de matiere (html/css) et de la moyenne general

--- a/Accueil/index2.html
+++ b/Accueil/index2.html
@@ -69,6 +69,22 @@
                         <ion-icon name="laptop-outline"></ion-icon>
                     </div>
                 </div>
+                <div class="boite-ajout">
+                    <div class="content">
+                        <div class="ajout">
+                            <p>Ajouter</p>
+                        </div>
+                    </div>
+                    <div class="image">
+                        <ion-icon name="add-circle-outline"></ion-icon>
+                    </div>
+                </div>
+            </div>
+            <div class="moyenneGeneral">
+                <div class="content">
+                    <p> Moyenne General</p>
+                    <span id="moyenne"> 10/20</span>
+                </div>
             </div>
             <div class="tabledematiere">
                 <div class="content">
