Ajout Fonctionnalité: verification des identifiant avant connection

--- a/Accueil/aide.html
+++ b/Accueil/aide.html
@@ -31,8 +31,8 @@
             <div class="contener2">
                 <div class="content">
                     <div class="Entete">
-                        <h1> Nous Contacter</h1>
-                        <p>Envoyer nous un message pour tout suggestion d'amélioration ou lorsque vous rencontrez des problème</p>
+                        <h1> Contacter</h1>
+                        <p>Envoyer  un message pour tout suggestion d'amélioration ou lorsque vous rencontrez des problème</p>
                     </div>
                     <form class="aideEnvoi">
                         <input type="email" name="email" placeholder="Entrer votre mail" class="email">
