--- a/Accueil/index2.html
+++ b/Accueil/index2.html
@@ -65,7 +65,7 @@
                             <span>15.00/20</span>
                         </div>
                         <div class="matiere">
-                            <p>Science De La Matiere</p>
+                            <p>BDAPLP </p>
                         </div>
                     </div>
                     <div class="image">
@@ -78,7 +78,7 @@
                             <span>15.00/20</span>
                         </div>
                         <div class="matiere">
-                            <p>Informatique</p>
+                            <p>Programation</p>
                         </div>
                     </div>
                     <div class="image">
@@ -133,11 +133,11 @@
                             </tr>
                             <tr> 
                                    
-                                <td>Science De La Matiere</td>
+                                <td>BDAPLP</td>
                                 <td> <ion-icon name="bar-chart-outline"></ion-icon></td>
                                 <td style="width:50px;">
                                     <div class="matiere" id="scienceDeLaMatiere">
-                                        <h3 >SDM</h3>
+                                        <h3 >BDAPLP</h3>
                                         <input type="number" placeholder="Entrez une note">
                                         <input type="number" placeholder="exemple: 0.5">
                                         <input type="submit" value="AJOUTER" class="ajouter">
@@ -146,11 +146,11 @@
                                 <td class="addNotes"><ion-icon name="add-outline"></ion-icon></td>
                             </tr>
                             <tr>
-                                <td>Informatique</td>
+                                <td>Programation</td>
                                 <td><ion-icon name="bar-chart-outline"></ion-icon> </td>
                                 <td >
                                     <div class="matiere" id="informatique">
-                                        <h3 >informatique</h3>
+                                        <h3 >Programation</h3>
                                         <input type="number" placeholder="Entrez une note">
                                         <input type="number" placeholder="exemple: 0.5">
                                         <input type="submit" value="AJOUTER" class="ajouter">
