--- a/IdentificationPage/inscription.html
+++ b/IdentificationPage/inscription.html
@@ -9,23 +9,24 @@
         <div class="contener">
             <h1>CREAT ACCOUNT</h1>
 
-            <form method="post" action="config.php" name="Formulaire" >
+            <form method="post"  name="Formulaire" >
                 <div class="inputFealds">
-                    <input type="text" name="identifiant" placeholder="Username" size="20">
-                    <input type="email" name="email" placeholder="Email" size="20">
-                    <input type="password" name="password" placeholder="Password" size="20">
-                    <input type="password" name="password2" placeholder="Repeat your password" size="20">
+                    <input type="text" id="PseudonymeInscription" placeholder="Pseudonyme" size="20">
+                    <input type="email" id="emailInscription" placeholder="Email" size="20">
+                    <input type="password" id="passwordInscription" placeholder="Mot de passe" size="20">
+                    <input type="password" id="password2Inscription" placeholder="Repeat your password" size="20">
 
                 </div> 
                 <div class="inscription" >
-                   <button type="submit" name="inscription"  >SINGN UP</button>  
+                   <button type="submit" name="inscription"  >INSCRIPTION</button>  
                 </div>
                 <div class="creatCompt">
-                    <p>Have already an account? </p>
-                    <a href="index.html"> Login her </a>
+                    <p>Vous n'avez pas encore de compte? </p>
+                    <a href="index.html"> Connection </a>
                 </div>
 
             </form>
         </div>
+        <script src="Js.js" ></script>
     </body>
 </html>
