--- a/IdentificationPage/inscription.html
+++ b/IdentificationPage/inscription.html
@@ -22,11 +22,11 @@
                 </div>
                 <div class="creatCompt">
                     <p>Vous n'avez pas encore de compte? </p>
-                    <a href="index.html"> Connection </a>
+                    <a href="/index.html"> Connection </a>
                 </div>
 
             </form>
         </div>
-        <script src="Js.js" ></script>
+        <script src="/IdentificationPage/Js.js" ></script>
     </body>
 </html>
