--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta href="UFT-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/IdentificationPage/style.css">
         <title>Lets Go</title>
     </head>
     <body>
@@ -17,7 +17,7 @@
                 <p style="color : red;" id="erreur"></p>
                 <div class="forgotPW">
                     <input type="checkbox" value="1" name="Remember" > se souvenir de moi 
-                    <a href="Forgot_Password.html"> mot de passe oublié?</a>
+                    <a href="/IdentificationPage/Forgot_Password.html"> mot de passe oublié?</a>
                 </div>
                 <div class="conection">
                   <!-- <input type="submit" value="connection" id="boutton"> -->
@@ -25,12 +25,12 @@
                 </div>
                 <div class="creatCompt">
                     <p>vous avez pas encore de compte? </p>
-                    <a href="inscription.html"> créer un compte </a>
+                    <a href="/IdentificationPage/inscription.html"> créer un compte </a>
                 </div>
                 
 
             </form>
         </div>
-        <script src="Js.js" ></script>
+        <script src="/IdentificationPage/Js.js" ></script>
     </body>
 </html>
