--- a/inscription.html
+++ b/inscription.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="creatCompt">
                     <p>Vous n'avez pas encore de compte? </p>
-                    <a href="/index.html"> Connection </a>
+                    <a href="index.html"> Connection </a>
                 </div>
 
             </form>
