--- a/aide.html
+++ b/aide.html
@@ -9,7 +9,7 @@
     <body>
         <div class="navigation">
             <ul>
-                <li><a href="#"><span class="icon"><ion-icon name="logo-windows"></ion-icon></span> <span class="tittle"> Brand name</span></a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="logo-windows"></ion-icon></span> <span class="tittle"> AZITS</span></a></li>
                 <li><a href="index2.html"><span class="icon"><ion-icon name="home-outline"></ion-icon></span> <span class="tittle"> Acceuille</span></a></li>
                 <!--<li><a href="#"><span class="icon"><ion-icon name="people-outline"></ion-icon></span> <span class="tittle" > Clients</span></a></li>
                 <li><a href="#"><span class="icon"><ion-icon name="chatbox-ellipses-outline"></ion-icon></span> <span class="tittle"> Message</span></a></li>-->
