--- a/index2.html
+++ b/index2.html
@@ -49,7 +49,7 @@
                 <div class="boite">
                     <div class="content">
                         <div class="moyenne">
-                            <span>__/__</span>
+                            <span>__/20</span>
                         </div>
                         <div class="matiere">
                             <p>Mathématique</p>
@@ -62,7 +62,7 @@
                 <div class="boite">
                     <div class="content">
                         <div class="moyenne">
-                            <span>__/__</span>
+                            <span>__/20</span>
                         </div>
                         <div class="matiere">
                             <p>BDAPLP </p>
@@ -75,7 +75,7 @@
                 <div class="boite">
                     <div class="content">
                         <div class="moyenne">
-                            <span>__/__</span>
+                            <span>__/20</span>
                         </div>
                         <div class="matiere">
                             <p>Programation</p>
@@ -98,7 +98,7 @@
             <div class="moyenneGeneral">
                 <div class="content">
                     <p> Moyenne General</p>
-                    <span id="moyenne"> __/__</span>
+                    <span id="moyenne"> __/20</span>
                 </div>
             </div>
             <div class="tabledematiere">
