--- a/aide.html
+++ b/aide.html
@@ -16,7 +16,7 @@
                 <li><a href="aide.html"><span class="icon"><ion-icon name="help-outline"></ion-icon></span> <span class="tittle"> Aide </span></a></li>
                 <li><a href="#"><span class="icon"><ion-icon name="settings-outline"></ion-icon></span> <span class="tittle"> Paramettre</span></a></li>
                 <li><a href="Password.html"><span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span> <span class="tittle"> Mot de Pass</span></a></li>
-                <li><a href="/IdentificationPage/index.html"><span class="icon"><ion-icon name="log-out-outline"></ion-icon></span> <span class="tittle"> Deconection</span></a></li>
+                <li><a href="index.html"><span class="icon"><ion-icon name="log-out-outline"></ion-icon></span> <span class="tittle"> Deconection</span></a></li>
             </ul>
         </div>
         <div class="main">
