--- a/inscription.html
+++ b/inscription.html
@@ -14,7 +14,7 @@
                     <input type="text" id="PseudonymeInscription" placeholder="Pseudonyme" size="20">
                     <input type="email" id="emailInscription" placeholder="Email" size="20">
                     <input type="password" id="passwordInscription" placeholder="Mot de passe" size="20">
-                    <input type="password" id="password2Inscription" placeholder="Repeat your password" size="20">
+                    <input type="password" id="password2Inscription" placeholder="Mot de passe" size="20">
 
                 </div> 
                 <div class="inscription" >
