--- a/Forgot_Password.html
+++ b/Forgot_Password.html
@@ -10,7 +10,7 @@
             
              <div class="entete">
                 <h1>FORGOT PASSWORD </h1> 
-                <p>after  send of formular, a link will be sent in your email into a other site to reset your password</p>
+                <p>Après l'envoie du formulaire ,un lien serra envoyée  à vore emmail.</p>
                 </div>
                 <form method="post" action="config.php" name="Formulaire">
                     <label for="email" class="labelF"> Your adress email:</label>
