--- a/Forgot_Password.html
+++ b/Forgot_Password.html
@@ -9,8 +9,8 @@
         <div class="contener">
             
              <div class="entete">
-                <h1>FORGOT PASSWORD </h1> 
-                <p>Après l'envoie du formulaire ,un lien serra envoyée  à vore emmail.</p>
+                <h1>Mot De Passe Oubliée</h1> 
+                <p>Après l'envoi du formulaire , un lien sera envoyé à votre e-mail.</p>
                 </div>
                 <form method="post" action="config.php" name="Formulaire">
                     <label for="email" class="labelF"> Your adress email:</label>
