--- a/index2.html
+++ b/index2.html
@@ -33,11 +33,11 @@
         <div class="navigation">
             <ul>
                 <li><a href="#"><span class="icon"><ion-icon name="logo-windows"></ion-icon></span> <span class="tittle"> AZITS</span></a></li>
-                <li><a href="index2.html"><span class="icon"><ion-icon name="home-outline"></ion-icon></span> <span class="tittle"> Acceuille</span></a></li>
+                <li><a href="index2.html"><span class="icon"><ion-icon name="home-outline"></ion-icon></span> <span class="tittle"> Accueille</span></a></li>
                 <li><a href="aide.html"><span class="icon"><ion-icon name="help-outline"></ion-icon></span> <span class="tittle"> Aide </span></a></li>
-                <li><a href="#"><span class="icon"><ion-icon name="settings-outline"> </ion-icon></span><span class="tittle"> Paramettre</span></a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="settings-outline"> </ion-icon></span><span class="tittle"> Paramètre</span></a></li>
                 <li><a href="Password.html"><span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span> <span class="tittle"> Mot de Pass</span></a></li>
-                <li><a href="index.html"><span class="icon"><ion-icon name="log-out-outline"></ion-icon></span> <span class="tittle"> Deconection</span></a></li>
+                <li><a href="index.html"><span class="icon"><ion-icon name="log-out-outline"></ion-icon></span> <span class="tittle"> Déconnection</span></a></li>
             </ul>
         </div>
         <div class="main">
