--- a/Password.html
+++ b/Password.html
@@ -30,8 +30,8 @@
                     </div>
                     <form class="password">
                         <input type="email" name="email" placeholder="Entrer votre mail" class="email">
-                        <input type="password" name="password" placeholder="Old password" class="changePassword">
-                        <input type="password" name="password" placeholder="new password" class="changePassword">
+                        <input type="password" name="password" placeholder="Encien mot de pass" class="changePassword">
+                        <input type="password" name="password" placeholder="nouveau mot de pass" class="changePassword">
                         
                         <button type="submit" name="envoyer" >Envoyer le message</button>
 
