--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="contener">
-            <h1>CONNETION</h1>
+            <h1>CONNECTION</h1>
 
             <form method="get" action="#" name="Formulaire" id="connection">
                 <div class="inputFealds">
