--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta href="UFT-8">
         <link rel="stylesheet" href="Style2.css">
-        <title>Lets Go</title>
+        <title>Projet1</title>
     </head>
     <body>
         <div class="contener">
