--- a/Forgot_Password.html
+++ b/Forgot_Password.html
@@ -3,7 +3,7 @@
     <head>
         <meta href="UTF-8">
         <link rel="stylesheet" href="Forgot.css">
-        <title>Forgot</title>
+        <title>Projet1</title>
     </head>
     <body>
         <div class="contener">
