--- a/Password.html
+++ b/Password.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="Style.css">
         <link rel="stylesheet" href="aide.css">
-        <title> Tuto</title>
+       <title>Projet1</title>
         <script src="https://kit.fontawesome.com/95aba64064.js" crossorigin="anonymous"></script>
     </head>
     <body>
