--- a/aide.html
+++ b/aide.html
@@ -4,7 +4,7 @@
         <meta href="UFT-8">
         <link rel="stylesheet" href="Style.css">
         <link rel="stylesheet" href="aide.css">
-        <title> Aide</title>
+        <title>Projet1</title>
     </head>
     <body>
         <div class="navigation">
